Add tests JVM args (PermGen)